Improve UI: Add organic content, update navigation, standardize styling across all pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Sparky Ad Format Mocks</h2>
         </header>
         
-        <nav class="site-nav" aria-label="Main navigation">
+        <nav class="site-nav home-nav" aria-label="Main navigation">
             <ul class="nav-list">
                 <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
                 <li class="nav-item"><a href="explore_stage_mock.html" class="nav-link">Explore</a></li>
@@ -30,6 +30,10 @@
                 <li class="nav-item"><a href="evaluate_stage_mock.html" class="nav-link">Evaluate</a></li>
                 <li class="nav-item"><a href="buy_stage_mock.html" class="nav-link">Buy</a></li>
                 <li class="nav-item"><a href="post_transaction_stage_mock.html" class="nav-link">Post-Purchase</a></li>
+                <li class="nav-item"><a href="innovative_format_1_sponsored_followups.html" class="nav-link">Sponsored Follow-ups</a></li>
+                <li class="nav-item"><a href="innovative_format_2_interactive_comparison.html" class="nav-link">Interactive Comparisons</a></li>
+                <li class="nav-item"><a href="innovative_format_3_conversational_brand_personas.html" class="nav-link">Brand Personas</a></li>
+                <li class="nav-item"><a href="innovative_format_4_immersive_experiences.html" class="nav-link">Immersive Experiences</a></li>
             </ul>
         </nav>
         
